# fsmon

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  LICENSE  PLAN.md  PROGRESS.md  README.en.md  README.md  README.zh-CN.md  REVIEW.md  SECURITY-FINDINGS-VERIFIED-ARRAY.json  SECURITY-FINDINGS-VERIFIED.json  SECURITY-FINDINGS-VERIFIED.md  SECURITY-FIX-PLAN.md  SECURITY-PROC-ANALYSIS-FINAL.json  SECURITY-PROC-ANALYSIS.json  SECURITY-PROC-ANALYSIS.md  SECURITY-SUMMARY.md  SECURITY-SYMLINK-ANALYSIS-FINAL.json  SECURITY-SYMLINK-ANALYSIS.md  SECURITY-SYMLINK-SUMMARY.md  TESTING.md  TEST_PLAN.md  TEST_PLAN_0.4.0.md  VULN-FINDINGS.json  VULN-FINDINGS.md  abstract.md  audit_report.md  demand.md  intro.md  plan.md  security-fix-summary.md  todo.md
.github/workflows/: bench.yml  ci.yml
.temp/: bench.md  how2test.md
benchmark/: README.md  common.sh  events_run.sh  perf_fsmon.sh  perf_stress.sh  post_run.sh  watchdog_run.sh
benchmark/perf/: clean.sh  manual.sh  query.sh  stress.sh
benchmark/tests/events/: create.sh  delete.sh  modify.sh  move.sh  recursive.sh  stress.sh
benchmark/tests/post/: clean.sh  query.sh
docs/plans/: 2026-05-05-config-store-log-redesign.md  2026-05-07-jsonl-format.md  2026-06-01-tests-and-ci.md
docs/specs/: 2026-05-05-config-store-log-redesign.md
docs/superpowers/plans/: 2026-05-01-h6-buffer-size-config.md  2026-05-05-single-binary-daemon.md
extensions/: README.md  fsmon-custom-format.py  fsmon-grafana.json  fsmon-kafka.py  fsmon-log-subscriber.py  fsmon-metrics.py  fsmon-subscribe-demo.py  fsmon-subscriber-example.rs  fsmon-to-es.py  fsmon-to-influxdb.py  fsmon-to-s3.py  fsmon-webhook.py  prometheus.yml  pyproject.toml  subscribe.py
extensions/_templates/: retry.py  socket_helpers.py  stats.py  subscribe.py  toml_helpers.py
extensions/examples/: forward-to-kafka.sh  read-jsonl.py  read-jsonl.sh  subscribe-socket.sh  subscribe.py  subscribe.sh
extensions/http-metrics/: fsmon-grafana.json  fsmon-metrics.py  prometheus.yml
extensions/jsonl-logs/: fsmon-log-tail.py
extensions/socket-admin/: fsmon-admin.py
extensions/subscribe-stream/: fsmon-custom-format.py  fsmon-kafka.py  fsmon-subscribe-demo.py  fsmon-to-es.py  fsmon-to-influxdb.py  fsmon-to-s3.py  fsmon-webhook.py
src/: clean.rs  cli.rs  common.rs  config.rs  daemon.rs  dir_cache.rs  fid_parser.rs  filters.rs  help.rs  lib.rs  main.rs  managed.rs  metrics.rs  monitor.rs  monitored.rs  output.rs  proc_cache.rs  query.rs  socket.rs  store.rs  systemd.rs  utils.rs  watchdog.rs
src/clean/: core.rs  mod.rs  tests.rs
src/common/: clean.rs  cli.rs  color.rs  config.rs  fid_parser.rs  filters.rs  help.rs  metrics.rs  mod.rs  monitor.rs  monitored.rs  proc_cache.rs  query.rs  security.rs  socket.rs  utils.rs  watchdog.rs
src/common/clean/: core.rs  mod.rs
src/common/config/: mod.rs  tests.rs
src/common/monitor/: channel.rs  dir_watcher.rs  events.rs  file_writer.rs  filtering.rs  init.rs  live_path.rs  mod.rs  reader.rs  socket_handler.rs  temp_marks.rs  tests.rs
src/common/query/: core.rs
src/config/: mod.rs  tests.rs
src/help/: changes.md
src/monitor/: channel.rs  dir_watcher.rs  event_bus_mod.rs  events.rs  fanotify_mgr.rs  file_writer.rs  filtering.rs  init.rs  inotify_mgr.rs  live_path.rs  metrics_collect.rs  mod.rs  monitor_config.rs  proc_mgr.rs  reader.rs  socket_handler.rs  socket_server_mod.rs  temp_marks.rs  tests.rs
src/query/: core.rs  mod.rs  tests.rs
test_configs/: phase1_default.toml  phase2_custom_log.toml  phase3_no_log.toml
tests/: README.md  cli.rs  cli_tests.rs  crash_recovery.rs  metrics.rs  monitor.rs  p1_cli.rs  p1_crash_recovery.rs  p1_metrics.rs  p1_monitor.rs  p1_utils.rs  p1_watchdog.rs  p1_watchdog_validation.rs  utils.rs  watchdog.rs  watchdog_validation.rs
tests/common/: fsmon_client.rs  fsmon_daemon.rs  mod.rs
