[package]
name = "fsmon"
version = "0.2.3"
edition = "2024"
license = "MIT"
description = "Lightweight High-Performance File System Change Tracking Tool"
documentation = "https://docs.rs/fsmon"
repository = "https://github.com/lenitain/fsmon"
readme = "README.md"
keywords = ["filesystem", "monitor", "linux", "fanotify"]
categories = ["filesystem", "command-line-utilities"]
authors = ["lenitain <xt.zhu@qq.com>"]

include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "README.zh-CN.md",
    "src/",
]

[[bin]]
name = "fsmon"
path = "src/bin/fsmon.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
fanotify-fid = { path = "../fanotify-fid" }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
procfs = "0.16"
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["user", "fs", "socket"] }
anyhow = "1.0"
users = "0.11"
fs2 = "0.4"
lru = "0.12"
regex = "1.10"
path-clean = "1.0"
smallvec = "1.15.1"
inotify = "0.10"
toml = "0.8"

[profile.release]
opt-level = 3
strip = true
lto = true

[dev-dependencies]
tempfile = "3.27.0"
