[package]
name = "fsmon"
version = "0.4.11"
edition = "2024"
license = "MIT"
description = "Lightweight High-Performance File System Change Tracking Tool"
repository = "https://github.com/lenitain/fsmon"
readme = "README.md"
keywords = ["filesystem", "monitor", "linux", "fanotify"]
categories = ["filesystem", "command-line-utilities"]
authors = ["lenitain <xt.zhu@qq.com>"]

include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "README.zh-CN.md",
    "src/",
]

[[bin]]
name = "fsmon"
path = "src/bin/fsmon.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
fanotify-fid = "0.2"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
moka = { version = "0.12", features = ["sync"] }
libc = "0.2"
proc-connector = "0.1"
nix = { version = "0.31", default-features = false, features = ["user", "fs", "socket"] }
anyhow = "1.0"
users = "0.11"
fs2 = "0.4"
lru = "0.18"
path-clean = "1.0"
smallvec = "1.15.1"
inotify = "0.11"
toml = "1.1"
sizefilter = "0.1"
timefilter = "0.1"
libsystemd = "0.7"
slotmap = "1.1.1"
proc-tree = "0.1"

[profile.release]
opt-level = 3
strip = true
lto = true

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.27.0"
